tests/paczka1/small_fuzzy/32514276.err
Error in line 1: rX0tE9qoQU A643 56,3
Error in line 10: hNZ7W4 S308 -2,3
Error in line 5: o882phT A643 53,2
Error in line 3: hNZ7W4 S308 34,8
Error in line 9: eQDCNdPBQN A643 94,4
Error in line 7: rX0tE9qoQU S363 68,7
Error in line 15: rX0tE9qoQU A643 95,1
